changelog.txt - What has been done to WinDirStat (newest top)
Last modified: $Date$
=============================================================

2005-10-11	assarbad
	* Added Dutch translation. Thanks to Gerben Wieringa.
	  Possibly requires more corrections, will send for review.

2005-07-16	assarbad
	* Release of version 1.1.2 which features new translations and some
	  very minor code corrections.

2005-04-17	assarbad
	* Fixed a bug that appeared only in the Spanish, Italian and Czech
	  resource DLLs, but seemed to be by chance. It was the fact that
	  the resource version string which had been moved to the *.rc2
	  files recently, had no explicit statement to which language it
	  belonged. Therefore the Spanish DLL contained the version string
	  as a German string, for example. This confused the ATL code.
	* Changed order of resources manually for one .rc to compare better
	  and track down that error above.
	* Minor changes: added comment and used GetModuleHandle() instead
	  of LoadLibrary() for osspecific.cpp in several places for those
	  DLLs which are anyway already loaded at the time the call is
	  placed.
	* Although included in the respective language DLL the IDS_SEV_* and
	  IDS_FROMsPLATFORMs are now located in the *.rc2 to not translate
	  them by mistake.
	* Changes to the version strings in version.h (resource DLLs need no
	  information whether Unicode or Debug. Development versions show
	  more information than before in the product version.
	* Corrected typo in the Russian translation. Thanks to Dima for
	  pointing it out to me.
	* Credits for translators now in a unicode encoded resource string!
	  Changes to the about dialog have been necessary, obviously.
	  The fact that only a single string with names of translators is
	  being used will greatly simplify maintenance as new translation
	  become available!

2005-04-10	assarbad
	* Added Italian resource DLL project
	* Added Czech resource DLL project